fixed layouts, added links and fixed index uploaded to openshift June 21

--- a/Adder.css
+++ b/Adder.css
@@ -159,6 +159,9 @@ td {
     padding: 0px;
     margin: 0px;
 }
+.ndx{
+    margin-left: 5%;
+}
 #th-id2 {
     background-color: #ebf1fd;
 }
@@ -169,7 +172,4 @@ td {
 #statusBox{
     background-color: tan;
     color: black;
-}
-#ndx{
-    margin-left: 10%;
 }
